# productivity-mcp

./: .gitignore  README.md  pyproject.toml
docs/: learning-journal.md
src/productivity_mcp/: db.py  errors.py  server.py  tracing.py
src/productivity_mcp/orchestrators/: daily.py
src/productivity_mcp/tools/: calendar.py  notes.py  tasks.py
