[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "productivity-mcp"
version = "0.1.0"
description = "Personal productivity MCP server with Tasks, Notes, and Calendar"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "aiosqlite",
]

[project.scripts]
productivity-mcp = "productivity_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
